# mpexpr

./: HISTORY  INSTALL  NOTES.11  README
doc/: Makefile  mpexpr.html  mpexpr.man  mpexpr.ps  mpexpr.txt
generic/: endian.c  longbits.c  mpexpr.c  mpexpr.h  mpformat.c  mpiface.c  mpparse.c  qfunc.c  qio.c  qmath.c  qmath.h  qmod.c  qtrans.c  zfunc.c  zio.c  zmath.c  zmath.h  zmod.c  zmul.c
mac/: README.mac  calcendian.h  install.tcl  longbits.h  mpexpr.make  pkgIndex.tcl
samples/: mpksc
tests/: all.tcl  defs  mpexpr.test  mpformat.test
unix/: .purify  Makefile.in  configure  configure.in  ldAix  mpinit.sed  pkgIndex.tcl.in
unix/shared/: README.shared
win/: README.win  calcendian.h  install.tcl  makefile.vc  mpexpr12.dll-win32  mpexpr12.dll-win64  pkgIndex.tcl  rules.vc
